--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
   "dependencies": {
     "@types/config": "0.0.36",
     "@types/express": "^4.17.7",
+    "@types/lolex": "^5.1.0",
     "bignumber.js": "^9.0.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "lodash": "^4.17.19",
+    "lolex": "^6.0.0",
+    "moment": "^2.27.0",
     "nock": "^13.0.3",
     "node-fetch": "^2.6.0"
   }
